// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`match > match > 0 matches 1`] = `[]`;

exports[`match > match > 1 match 1`] = `
[
  {
    "first": [Circular],
    "isFull": true,
    "location": "/",
    "next": undefined,
    "params": {},
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/",
      "test": {
        "keys": [],
        "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
]
`;

exports[`match > match > 1 match and 1 match with params 1`] = `
[
  {
    "first": [Circular],
    "isFull": false,
    "location": "/",
    "next": {
      "first": [Circular],
      "isFull": true,
      "location": "/abc",
      "next": undefined,
      "params": {},
      "route": {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/abc",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
    },
    "params": {},
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/",
      "test": {
        "keys": [],
        "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
      },
      "tree": [
        {
          "elements": {},
          "loaded": false,
          "modules": [],
          "path": "/abc",
          "test": {
            "keys": [],
            "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
          },
        },
        {
          "elements": {},
          "loaded": false,
          "modules": [],
          "path": "/[:id]",
          "test": {
            "keys": [
              "id",
            ],
            "pattern": /\\^\\\\/\\(\\[\\^/\\]\\+\\?\\)\\(\\?=\\$\\|\\\\/\\)/i,
          },
        },
      ],
    },
  },
  {
    "first": {
      "first": [Circular],
      "isFull": false,
      "location": "/",
      "next": [Circular],
      "params": {},
      "route": {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/",
        "test": {
          "keys": [],
          "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
        },
        "tree": [
          {
            "elements": {},
            "loaded": false,
            "modules": [],
            "path": "/abc",
            "test": {
              "keys": [],
              "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
            },
          },
          {
            "elements": {},
            "loaded": false,
            "modules": [],
            "path": "/[:id]",
            "test": {
              "keys": [
                "id",
              ],
              "pattern": /\\^\\\\/\\(\\[\\^/\\]\\+\\?\\)\\(\\?=\\$\\|\\\\/\\)/i,
            },
          },
        ],
      },
    },
    "isFull": true,
    "location": "/abc",
    "next": undefined,
    "params": {},
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
]
`;

exports[`match > match > 1 match with params 1`] = `
[
  {
    "first": [Circular],
    "isFull": true,
    "location": "/100",
    "next": undefined,
    "params": {
      "id": "100",
    },
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/[:id]",
      "test": {
        "keys": [
          "id",
        ],
        "pattern": /\\^\\\\/\\(\\[\\^/\\]\\+\\?\\)\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
]
`;

exports[`match > match > 2 matches 1`] = `
[
  {
    "first": [Circular],
    "isFull": false,
    "location": "/",
    "next": {
      "first": [Circular],
      "isFull": true,
      "location": "/abc",
      "next": undefined,
      "params": {},
      "route": {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/abc",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
    },
    "params": {},
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/",
      "test": {
        "keys": [],
        "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
      },
      "tree": [
        {
          "elements": {},
          "loaded": false,
          "modules": [],
          "path": "/abc",
          "test": {
            "keys": [],
            "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
          },
        },
      ],
    },
  },
  {
    "first": {
      "first": [Circular],
      "isFull": false,
      "location": "/",
      "next": [Circular],
      "params": {},
      "route": {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/",
        "test": {
          "keys": [],
          "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
        },
        "tree": [
          {
            "elements": {},
            "loaded": false,
            "modules": [],
            "path": "/abc",
            "test": {
              "keys": [],
              "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
            },
          },
        ],
      },
    },
    "isFull": true,
    "location": "/abc",
    "next": undefined,
    "params": {},
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
]
`;
